--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,13 @@
 			<artifactId>json</artifactId>
 			<version>20231013</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
